# hbp-results

./: .gitignore  .travis.yml  README.md  README.rst  hbp_enrichment.py  hbp_results.py  main.py  requirements.txt  setup.cfg
data/: api_summary.tsv  curation_overview_table.xlsx  curation_summary.csv  error_accuracy_table.tsv  error_types.csv  inhibition_edges_summary.csv
notebooks/: Assessment of Inter-Annotator Agreement.ipynb  Assessment of accuracies by edge type.ipynb  INDRA Curation Notebook.ipynb  INDRA Curation Statistics.ipynb  README.rst  Re-curation Statistics.ipynb  Sanitize the excel sheets from curation.ipynb
rounds/: README.rst
rounds/enrichment-1/AGO2/: AGO2.bel.tsv  AGO2_curated.xlsx  AGO2_statements.pkl
rounds/enrichment-1/CHI3L2/: CHI3L2.bel.tsv
rounds/enrichment-1/DEFB1/: DEFB1.bel.tsv  DEFB1_statements.pkl
rounds/enrichment-1/GRK2/: GRK2.bel.tsv  GRK2_statements.pkl
rounds/enrichment-1/HDLBP/: HDLBP_statements.pkl
rounds/enrichment-1/HLA-DQB1/: HLA-DQB1.bel.tsv  HLA-DQB1_curated.xlsx  HLA-DQB1_statements.pkl
rounds/enrichment-1/IL2RA/: IL2RA.bel.tsv
rounds/enrichment-1/INA/: INA_curated.xlsx  INA_statements.pkl
rounds/enrichment-1/LAMTOR1/: LAMTOR1.bel.tsv  LAMTOR1_curated.xlsx  LAMTOR1_statements.pkl
rounds/enrichment-1/MRC1/: MRC1_curated.xlsx  MRC1_statements.pkl
rounds/enrichment-1/NFE2L1/: NFE2L1.bel.tsv  NFE2L1_curated.xlsx
rounds/enrichment-1/PTGER2/: PTGER2.bel.tsv  PTGER2_curated.xlsx
rounds/enrichment-1/SLC39A1/: SLC39A1_curated.xlsx  SLC39A1_statements.pkl
rounds/enrichment-1/TMSB4X/: TMSB4X.bel.tsv  TMSB4X_curated.xlsx  TMSB4X_statements.pkl
rounds/enrichment-1/TPM1/: TPM1_statements.pkl
rounds/enrichment-1/USF2/: USF2.bel.tsv  USF2_statements.pkl
rounds/enrichment-1/VIM/: VIM.bel.tsv
rounds/enrichment-2/ADAMTS1/: ADAMTS1_curated.xlsx
src/hbp_enrichment/: __init__.py  __main__.py
utils/: README.rst  utils.py
(+303 files in other folders)
