##########################
# Setup.py Configuration #
##########################
[metadata]
name = hbp_enrichment
version = 0.0.1-dev
description = Rational enrichment of some knowledge graphs in NeuroMMSig
long_description = file: README.rst

# URLs
url = https://github.com/bel-enrichment/results
download_url = https://github.com/bel-enrichment/results/releases
project_urls =
    Bug Tracker = https://github.com/bel-enrichment/results/issues

# Author information
author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de

# License Information
license = MIT License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Biological Expression Language
    BEL
    Domain Specific Language
    DSL
    Systems Biology
    Networks Biology

[options]
install_requires =
    click
    pandas
    neurommsig_knowledge
    pybel
    bel_enrichment

# Random options
python_requires = >=3.6
zip-safe = false
include-package-data = true

# Where is my code
# packages = hbp_enrichment
py_modules = hbp_enrichment

[options.entry_points]
console_scripts =
    hbp-enrichment = hbp_enrichment:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120
